--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,4 +5,4 @@ layout: default
 
 {{ content }}
 
-<p align=center>{a href="https://majacannavo.github.io">Back Home</a></p>
+<p align=center><a href="https://majacannavo.github.io">Back Home</a></p>
